--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,3 +1,16 @@
-body {
-  background-color: lightblue;
+label {
+  float: left;
+  text-align: right;
+  width: 6em;
+  margin-bottom: 0.5em;
+}
+
+input[type="text"] {
+  width: 15em;
+  margin-left: 1em;
+  margin-bottom: 0.5em;
+}
+
+#submit {
+  margin-left: 7em;
 }
