--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,59 @@
+{% extends 'base.html' %} {% block body %}
 
+<h1>Verticle Tank Maintainance</h1>
+<hr />
+<h3>About Verticle Tank Maintainance</h3>
 
-{% extends 'base.html' %}
-
-{% block body %}
-
-	<h2> Hello Mike!!! </h2>
-
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua. Dignissim sodales ut eu sem
+  integer vitae justo eget. Fames ac turpis egestas maecenas pharetra. Tincidunt
+  vitae semper quis lectus nulla at volutpat diam. Elementum curabitur vitae
+  nunc sed. Sagittis orci a scelerisque purus semper eget duis at. Justo eget
+  magna fermentum iaculis eu. Blandit turpis cursus in hac habitasse platea
+  dictumst. Sagittis id consectetur purus ut faucibus pulvinar elementum
+  integer. Arcu cursus vitae congue mauris rhoncus. Odio morbi quis commodo odio
+  aenean sed. Pretium fusce id velit ut tortor pretium. Tempus quam pellentesque
+  nec nam. Quis enim lobortis scelerisque fermentum dui faucibus in. Dui nunc
+  mattis enim ut. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra
+  sit amet aliquam id diam maecenas ultricies mi eget. Mauris cursus mattis
+  molestie a. Nunc id cursus metus aliquam eleifend. Elit scelerisque mauris
+  pellentesque pulvinar pellentesque. Urna duis convallis convallis tellus id
+  interdum velit laoreet. Tincidunt vitae semper quis lectus nulla at volutpat
+  diam. Enim nulla aliquet porttitor lacus luctus. Tristique et egestas quis
+  ipsum suspendisse. Eu non diam phasellus vestibulum lorem sed risus. Pretium
+  lectus quam id leo.
+</p>
+<p>
+  Nulla aliquet enim tortor at auctor urna nunc id cursus. Phasellus vestibulum
+  lorem sed risus ultricies tristique nulla aliquet enim. Nunc lobortis mattis
+  aliquam faucibus purus in massa tempor. Est ullamcorper eget nulla facilisi
+  etiam dignissim. Habitasse platea dictumst quisque sagittis purus sit amet
+  volutpat consequat. Lacus viverra vitae congue eu consequat ac felis donec.
+  Aliquet enim tortor at auctor urna. Posuere morbi leo urna molestie. Proin sed
+  libero enim sed faucibus turpis. Egestas erat imperdiet sed euismod nisi.
+  Netus et malesuada fames ac turpis egestas integer. Ac ut consequat semper
+  viverra nam libero justo. Id faucibus nisl tincidunt eget nullam non nisi est.
+</p>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua. Dignissim sodales ut eu sem
+  integer vitae justo eget. Fames ac turpis egestas maecenas pharetra. Tincidunt
+  vitae semper quis lectus nulla at volutpat diam. Elementum curabitur vitae
+  nunc sed. Sagittis orci a scelerisque purus semper eget duis at. Justo eget
+  magna fermentum iaculis eu. Blandit turpis cursus in hac habitasse platea
+  dictumst. Sagittis id consectetur purus ut faucibus pulvinar elementum
+  integer. Arcu cursus vitae congue mauris rhoncus. Odio morbi quis commodo odio
+  aenean sed. Pretium fusce id velit ut tortor pretium. Tempus quam pellentesque
+  nec nam. Quis enim lobortis scelerisque fermentum dui faucibus in. Dui nunc
+  mattis enim ut. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra
+  sit amet aliquam id diam maecenas ultricies mi eget. Mauris cursus mattis
+  molestie a. Nunc id cursus metus aliquam eleifend. Elit scelerisque mauris
+  pellentesque pulvinar pellentesque. Urna duis convallis convallis tellus id
+  interdum velit laoreet. Tincidunt vitae semper quis lectus nulla at volutpat
+  diam. Enim nulla aliquet porttitor lacus luctus. Tristique et egestas quis
+  ipsum suspendisse. Eu non diam phasellus vestibulum lorem sed risus. Pretium
+  lectus quam id leo.
+</p>
+<footer>&copy;VTM 2020</footer>
 {% endblock %}
