--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,33 @@
+{% extends 'base.html' %} {% block body %}
 
+<h1>Verticle Tank Maintainance</h1>
+<hr />
+<h1>Welcome to VTM</h1>
 
-{% extends 'base.html' %}
+<img
+  src="{{ url_for('static', filename='images/above_ground_vertical_tanks.jpg') }}"
+/>
 
-{% block body %}
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  incididunt ut labore et dolore magna aliqua. Dignissim sodales ut eu sem
+  integer vitae justo eget. Fames ac turpis egestas maecenas pharetra. Tincidunt
+  vitae semper quis lectus nulla at volutpat diam. Elementum curabitur vitae
+  nunc sed. Sagittis orci a scelerisque purus semper eget duis at. Justo eget
+  magna fermentum iaculis eu. Blandit turpis cursus in hac habitasse platea
+  dictumst. Sagittis id consectetur purus ut faucibus pulvinar elementum
+  integer. Arcu cursus vitae congue mauris rhoncus. Odio morbi quis commodo odio
+  aenean sed. Pretium fusce id velit ut tortor pretium. Tempus quam pellentesque
+  nec nam. Quis enim lobortis scelerisque fermentum dui faucibus in. Dui nunc
+  mattis enim ut. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra
+  sit amet aliquam id diam maecenas ultricies mi eget. Mauris cursus mattis
+  molestie a. Nunc id cursus metus aliquam eleifend. Elit scelerisque mauris
+  pellentesque pulvinar pellentesque. Urna duis convallis convallis tellus id
+  interdum velit laoreet. Tincidunt vitae semper quis lectus nulla at volutpat
+  diam. Enim nulla aliquet porttitor lacus luctus. Tristique et egestas quis
+  ipsum suspendisse. Eu non diam phasellus vestibulum lorem sed risus. Pretium
+  lectus quam id leo.
+</p>
 
-	<h2> This is my Flask server! </h2>
-
-	<img src="{{ url_for('static', filename='images/flask.jpg') }}" />
-
+<footer>&copy;VTM 2020</footer>
 {% endblock %}
