--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>{{ pageTitle }}</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}">
-</head>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='css/stylesheet.css') }}"
+    />
+  </head>
 
   <body>
+    <nav>
+      <u1>
+        <li><a class="active" href="./">Home</a></li>
+        <li><a href="./about">About</a></li>
+        <li><a href="./estimate">Estimate</a></li>
+      </u1>
+    </nav>
 
-      {% block body %}
-
-	  {% endblock %}
-
- </body>
-
+    {% block body %} {% endblock %}
+  </body>
 </html>
